# pyplate

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  pyplate.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
pysrc/boilerplate/cli/: __init__.py  __main__.py
pysrc/pyplate/cli/: __init__.py  __main__.py
pytests/: test_boilerplate.py  test_pyplate.py
pytests/test_cli/: test_app.py
