[tool.black]
# bump the dev dependency version when updating this
# also bump black version in the pre-commit config
required-version = "24.3.0"
line-length = 119
# fast disables black AST (covered by bandit pre-commit plugin)
fast = true
# preview required for unstable features
preview = true
# check these with `black --help` when updating required-version
enable-unstable-feature = [
    "hex_codes_in_unicode_sequences",
    "string_processing",
    "hug_parens_with_braces_and_square_brackets",
    "unify_docstring_detection",
    "no_normalize_fmt_skip_whitespace",
    "wrap_long_dict_values_in_parens",
    "multiline_string_handling",
    "typed_params_trailing_comma",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
norecursedirs = [".git", ".tox", ".env", ".venv"]
testpaths = ["pytests"]
timeout = 60
pythonpath = ["pysrc"]

[tool.poetry]
name = "pyplate"
version = "0.0.0"
description = ""
authors = ["Tyson Holub <tyson@tysonholub.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyplate", from = "pysrc" }]
include = ["pyplate.md"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
coverage = "^7"
pytest = "^7"
pytest-asyncio = "^0.21"
pytest-timeout = "^2"

[tool.poetry.scripts]
pyplate = { callable = "pyplate.cli:app" }

[tool.isort]
line_length = 119
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["pysrc", "pytests"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.'FORMAT']
max-line-length = 119

[tool.pylint.'MESSAGES CONTROL']
disable = ["wrong-import-position"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"
